# pico

arduino/door_bell/: door_bell.ino
arduino/fading_led.ino/: fading_led.ino.ino
arduino/hello_led.ino/: hello_led.ino.ino
arduino/measure_light_intensity/: measure_light_intensity.ino
arduino/morse_code/: morse_code.ino
arduino/stepper_test/: stepper_test.ino
arduino/table_lamp.ino/: table_lamp.ino.ino
arduino/warning_light.ino/: warning_light.ino.ino
micropython/: Song.py  buzzer-test.py
pi-pico/: CMakeLists.txt
pi-pico/blink/: CMakeLists.txt  main.c
pi-pico/music-box/: CMakeLists.txt  main.c
